--- a/tnkids.html
+++ b/tnkids.html
@@ -24,6 +24,7 @@
                     return (
                         <div>
                             <h1>Welcome, {this.props.name}!</h1>
+                            <h2>Current Tour Leg: {this.state.number}</h2>
                         </div>
                     );
                 }
